--- a/src/app/components/menu-left/menu-left.component.html
+++ b/src/app/components/menu-left/menu-left.component.html
@@ -12,17 +12,17 @@
     <span class="heading">Menu</span>
     <ul class="list-unstyled sidebar-menu">
         <li routerLinkActive="active">
-          <a [routerLink]="['/']">
+          <a [routerLink]="['/ads']">
             <i class="fas fa-tachometer-alt"></i> Anuncios
           </a>
         </li>
         <li routerLinkActive="active">
-          <a [routerLink]="['/configuration-user']">
+          <a [routerLink]="['/user-settings']">
             <i class="fas fa-tachometer-alt"></i> Configuracion
           </a>
         </li>
         <li routerLinkActive="active">
-          <a [routerLink]="['/propuestas']">
+          <a [routerLink]="['/proposals']">
             <i class="fas fa-tachometer-alt"></i> Propuestas
           </a>
         </li>
