--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,9 @@
         <ul class="nav-menu list-unstyled">
           <li class="nav-item">
             <a (click)="logout()" class="nav-link logout p-0">
-              <span class="d-none d-sm-inline">Salir</span>
+              <span class="d-none d-sm-inline">
+                <fa-icon [icon]="faSignOutAlt"></fa-icon> Salir
+              </span>
             </a>
           </li>
         </ul>
