--- a/src/app/components/dashboard/ads/ads.component.html
+++ b/src/app/components/dashboard/ads/ads.component.html
@@ -1,10 +1,7 @@
 <div class="page-header">
-    <!-- <div class="container-fluid">
-        <h2 class="no-margin-bottom">{{title}}</h2>
-    </div> -->
     <div class="row">
         <div class="col-6">
-            <h2 class="no-margin-bottom">{{title}}</h2>{{roleUser}}
+            <h2 class="no-margin-bottom">{{title}}</h2>
         </div>
         <div class="col-6 text-right" *ngIf="roleAdmin">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addAd">
@@ -49,7 +46,7 @@
             <div class="modal-body">
                 <form #adAddForm="ngForm" (ngSubmit)="addAd(adAddForm)">
                     <div class="form-group">
-                        <input type="email" class="form-control" id="ad-title" placeholder="Titulo" name="title" [(ngModel)]="ad.title" required>
+                        <input type="text" class="form-control" id="ad-title" placeholder="Titulo" name="title" [(ngModel)]="ad.title" required>
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" id="ad-description" rows="5" placeholder="Que quieres comunicar..." name="description" [(ngModel)]="ad.description" required></textarea>
