--- a/src/app/components/menu-left/menu-left.component.html
+++ b/src/app/components/menu-left/menu-left.component.html
@@ -2,7 +2,7 @@
     <!-- Sidebar Header-->
     <div class="sidebar-header d-flex align-items-center">
       <div class="title">
-        <h1 class="h4">
+        <h1 class="h4" id="employee-name">
           {{identity.name}}
           {{identity.lastname}}
         </h1>
@@ -11,6 +11,11 @@
     
     <span class="heading">Menu</span>
     <ul class="list-unstyled sidebar-menu">
+        <li>
+          <a [routerLink]="['/']">
+            <fa-icon [icon]="faHome" class="pr-2"></fa-icon> Home
+          </a>
+        </li>
         <li routerLinkActive="active">
           <a [routerLink]="['/ads']">
             <fa-icon [icon]="faNewspaper" class="pr-2"></fa-icon> Anuncios
