Solucionar el problema de borrar noticias y el localStorage no se actualizaba al actualizar los datos del empleado

--- a/src/app/components/dashboard/ads/ads.component.html
+++ b/src/app/components/dashboard/ads/ads.component.html
@@ -18,7 +18,7 @@
                 <span class="title-ad">
                     <h3>{{ad.title}}</h3>
                 </span>
-                <span class="actions" *ngIf="roleAdmin">
+                <span class="actions" *ngIf="roleAdmin" (click)="deleteAd(ad._id)">
                     <button><fa-icon [icon]="faTrash"></fa-icon></button>
                 </span>
             </div>
