--- a/src/app/components/dashboard/home/home.component.html
+++ b/src/app/components/dashboard/home/home.component.html
@@ -1,3 +1,68 @@
-<p>
-  home works!
-</p>
+<div class="page-header">
+    <div class="row">
+        <div class="col-6">
+            <h2 class="no-margin-bottom">{{title}}</h2>
+        </div>
+    </div>
+</div>
+
+
+<div class="row cards">
+
+  <div class="col-6 col-sm-4 item">
+      <div class="card m-3" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Anuncios</h5>
+          <p class="card-text">Podras ver las noticias que pone la empresa.</p>
+          <a routerLink="/ads" class="btn btn-primary">Ver Anuncios</a>
+        </div>
+      </div>
+  </div>
+  <div class="col-6 col-sm-4 item">
+      <div class="card m-3" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Configuracion</h5>
+          <p class="card-text">Configura tu perfil, cuenta de banco donde ingresar la nomina o revisa tu contrato.</p>
+          <a  routerLink="/user-settings" class="btn btn-primary">Configurar Perfil</a>
+        </div>
+      </div>
+  </div>
+  <div class="col-6 col-sm-4 item">
+      <div class="card m-3" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Propuestas</h5>
+          <p class="card-text">Tienes una idea para mejorar la empresa, escribe cualquier propuesta que se te ocurra, los envíos son anónimos</p>
+          <a  routerLink="/proposals" class="btn btn-primary">Ver Propuestas</a>
+        </div>
+      </div>
+  </div>
+  <div class="col-6 col-sm-4 item">
+      <div class="card m-3" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Nominas</h5>
+          <p class="card-text">Revisa tu nominas</p>
+          <a  routerLink="/proposals" class="btn btn-primary">Ver Nominas</a>
+        </div>
+      </div>
+  </div>
+  <div class="col-6 col-sm-4 item">
+      <div class="card m-3" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Propuestas</h5>
+          <p class="card-text">Tienes una idea para mejorar la empresa, escribe cualquier propuesta que se te ocurra, los envíos son anónimos</p>
+          <a  routerLink="/proposals" class="btn btn-primary">Ver Propuestas</a>
+        </div>
+      </div>
+  </div>
+  <div class="col-6 col-sm-4 item">
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Check-In & Check-Out</h5>
+          <p class="card-text">Inicia cuando empiezes a trabajar y cuando salgas.</p>
+          <a  routerLink="/check" class="btn btn-primary">Check-In & Check-Out</a>
+        </div>
+      </div>
+  </div>
+
+</div>
+
