--- a/src/app/components/menu-left/menu-left.component.html
+++ b/src/app/components/menu-left/menu-left.component.html
@@ -22,11 +22,6 @@
           </a>
         </li>
         <li routerLinkActive="active">
-          <a [routerLink]="['/user-settings']">
-            <fa-icon [icon]="faCogs" class="pr-2"></fa-icon> Configuracion
-          </a>
-        </li>
-        <li routerLinkActive="active">
           <a [routerLink]="['/proposals']">
             <fa-icon [icon]="faLightbulb" class="pr-2"></fa-icon> Propuestas
           </a>
@@ -34,6 +29,16 @@
         <li routerLinkActive="active">
           <a [routerLink]="['/check']">
             <fa-icon [icon]="faHourglass" class="pr-2"></fa-icon> Check-In & Check-Out
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a [routerLink]="['/nominas']">
+            <fa-icon [icon]="faFileAlt" class="pr-2"></fa-icon> Nominas
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a [routerLink]="['/user-settings']">
+            <fa-icon [icon]="faCogs" class="pr-2"></fa-icon> Configuracion
           </a>
         </li>
     </ul>
