--- a/src/app/components/dashboard/proposals/proposals.component.html
+++ b/src/app/components/dashboard/proposals/proposals.component.html
@@ -16,7 +16,7 @@
 
 <div class="container-block" *ngIf="roleEmployee === 'ROLE_ADMIN'">
   <div class="row container-item">
-    <div class="col-12 container-item__content">
+    <div class="col-12 container-item__content menu">
 
       <ul class="nav nav-pills nav-fill" id="pills-tab" role="tablist">
         <li class="nav-item">
@@ -31,16 +31,6 @@
   </div>
 </div>
 
-<!-- <div class="container-block">
-    <div class="row container-item">
-      <div class="col-12 container-item__content">
-  
-          
-  
-    </div>
-  </div>
-</div> -->
-
 
 
 <div class="tab-content" id="pills-tabContent">
@@ -52,13 +42,14 @@
             <div class="row container-item" *ngIf="proposal.active === true">
                 <div class="col-12 container-item__header">
                   <h3>{{proposal.title}}</h3>
+                  <button (click)="deleteProposalPrepared(proposal)" data-toggle="modal" data-target="#deleteProposal" class="ml-2"><fa-icon [icon]="faTrashAlt" class="delete"  *ngIf="roleEmployee === 'ROLE_ADMIN'"></fa-icon></button>
                 </div>
                 <div class="col-12 container-item__content">
                   {{proposal.description}}
                 </div>
                 <div class="col-12 container-item__footer">
-                  <button class="mr-1"><fa-icon [icon]="faThumbsUp" class="like"></fa-icon></button> 0
-                  <button class="ml-4 mr-1"><fa-icon [icon]="faThumbsDown" class="dislike"></fa-icon></button> 0
+                  <button (click)="voteProposal(proposal, 'like')" class="mr-1"><fa-icon [icon]="faThumbsUp" class="like"></fa-icon></button> {{proposal.like}}
+                  <button (click)="voteProposal(proposal, 'dislike')" class="ml-4 mr-1"><fa-icon [icon]="faThumbsDown" class="dislike"></fa-icon></button> {{proposal.dislike}}
                 </div>
             </div>
             </ng-container>
@@ -79,8 +70,8 @@
               {{proposal.description}}
             </div>
             <div class="col-12 container-item__footer">
-              <button (click)="acceptProposal(proposal)" class="mr-2"><fa-icon [icon]="faCheck" class="like"></fa-icon></button>
-              <button class="ml-2"><fa-icon [icon]="faTimes" class="dislike"></fa-icon></button>
+              <button (click)="acceptProposal(proposal)" class="mr-2"><fa-icon [icon]="faCheck" class="accept"></fa-icon></button>
+              <button (click)="deleteProposalPrepared(proposal)" data-toggle="modal" data-target="#deleteProposal" class="ml-2"><fa-icon [icon]="faTimes" class="delete"></fa-icon></button>
             </div>
         </div>
         </ng-container>
@@ -103,53 +94,42 @@
 
 
 
-
-
-
-
-
-
-
-
-<!-- <div class="container-block">
-  <div class="row container-item" *ngFor="let proposal of proposals">
-    <div class="col-12 container-item__header">
-      <h3>{{proposal.title}}</h3>
-    </div>
-    <div class="col-12 container-item__content">
-      {{proposal.description}}
-    </div>
-    <div class="col-12 container-item__footer">
-      <button class="mr-1"><fa-icon [icon]="faThumbsUp" class="like"></fa-icon></button> 0
-      <button class="ml-4 mr-1"><fa-icon [icon]="faThumbsDown" class="dislike"></fa-icon></button> 0
-    </div>
-  </div>
-</div> -->
-
-
-
-
 <!-- Modal Add Proposal -->
 <div class="modal fade" id="addProposal" tabindex="-1" role="dialog" aria-labelledby="addProposal" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="addProposal">Nueva Propuesta</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-            <form #addProposalForm="ngForm" (ngSubmit)="addProposal(addProposalForm)">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Titulo" name="title" [(ngModel)]="proposal.title" required>
-                </div>
-                <div class="form-group">
-                    <textarea class="form-control" rows="5" placeholder="Que quieres comunicar..." name="description" [(ngModel)]="proposal.description" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-success">Crear Propuesta</button>
-            </form>
-        </div>
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addProposal">Nueva Propuesta</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <form #addProposalForm="ngForm" (ngSubmit)="addProposal(addProposalForm)">
+              <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Titulo" name="title" [(ngModel)]="proposal.title" required>
+              </div>
+              <div class="form-group">
+                  <textarea class="form-control" rows="5" placeholder="Que quieres comunicar..." name="description" [(ngModel)]="proposal.description" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-success">Crear Propuesta</button>
+          </form>
       </div>
     </div>
   </div>
+</div>
+
+<!-- Modal Confirmation Delete Employee -->
+<div class="modal fade" id="deleteProposal" tabindex="-1" role="dialog" aria-labelledby="deleteProposal" aria-hidden="true" *ngIf="delProposal">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h5 class="modal-title" id="deleteProposal">¿Eliminar la propuesta {{delProposal.title}}?</h5>
+      </div>
+      <div class="modal-body text-center">
+        <button type="button" class="btn btn-danger mr-2" data-dismiss="modal" (click)="deleteProposal(delProposal._id)">Eliminar</button>
+        <button type="button" class="btn btn-primary ml-2" data-dismiss="modal">Cerrar Ventana</button>
+      </div>
+    </div>
+  </div>
+</div>
