--- a/src/app/components/menu-left/menu-left.component.html
+++ b/src/app/components/menu-left/menu-left.component.html
@@ -32,7 +32,7 @@
           </a>
         </li>
         <li routerLinkActive="active">
-          <a [routerLink]="['/nominas']">
+          <a [routerLink]="['/payroll']">
             <fa-icon [icon]="faFileAlt" class="pr-2"></fa-icon> Nominas
           </a>
         </li>
