--- a/src/app/components/dashboard/payroll/payroll.component.html
+++ b/src/app/components/dashboard/payroll/payroll.component.html
@@ -1,98 +1,162 @@
 <div class="page-header">
   <div class="row">
     <div class="col-6">
-      <h2 class="no-margin-bottom">{{title}}</h2>
+      <h2 class="no-margin-bottom">{{ title }}</h2>
     </div>
-    <div class="col-6 text-right" *ngIf="roleEmployee === 'ROLE_ADMIN' && employees">
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addPayroll">
+    <div
+      class="col-6 text-right"
+      *ngIf="roleEmployee === 'ROLE_ADMIN' && employees"
+    >
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-toggle="modal"
+        data-target="#addPayroll"
+      >
         Subir Nomina
       </button>
     </div>
   </div>
 </div>
 
+<div class="container-block" *ngIf="roleEmployee === 'ROLE_ADMIN'">
+  <div class="row container-item">
+    <div class="col-12 container-item__header">
+      <h5>Seleciona un Empleado</h5>
 
-
-<div class="container-block">
-    <div class="row container-item">
-        <div class="col-12 container-item__header">
-          <h5>Seleciona un Empleado</h5>
-        
-          <select class="form-control" (change)="changeSelectEmployee($event)" [(ngModel)]="employeeId" required>
-            <option *ngFor="let employee of employees" [value]="employee._id">{{employee.name}} {{employee.lastname}}</option>
-          </select>
-      </div>
+      <select
+        class="form-control"
+        (change)="changeSelectEmployee($event)"
+        [(ngModel)]="employeeId"
+        required
+      >
+        <option *ngFor="let employee of employees" [value]="employee._id"
+          >{{ employee.name }} {{ employee.lastname }}</option
+        >
+      </select>
     </div>
+  </div>
 </div>
 
 <div class="container-block">
   <ng-container *ngFor="let payroll of payrolls">
-  <div class="row container-item">
+    <div class="row container-item">
       <div class="col-6 container-item__header">
-        <h3>{{formatDate(payroll.date)}}</h3>
+        <h3>{{ formatDate(payroll.date) }}</h3>
       </div>
       <div class="col-6 container-item__actions">
-        <a [attr.href]="getUrlPayroll(payroll.file)" target="_blank" class="btn btn-success download">Descargar</a>
-        <button (click)="deletePayrollPrepared(payroll)" data-toggle="modal" data-target="#deletePayroll" class="btn btn-danger delete">Eliminar</button>
+        <a
+          [attr.href]="getUrlPayroll(payroll.file)"
+          target="_blank"
+          class="btn btn-success download"
+          >Descargar</a
+        >
+        <button
+          (click)="deletePayrollPrepared(payroll)"
+          data-toggle="modal"
+          data-target="#deletePayroll"
+          class="btn btn-danger delete"
+          *ngIf="roleEmployee === 'ROLE_ADMIN'"
+        >
+          Eliminar
+        </button>
       </div>
-  </div>
+    </div>
   </ng-container>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
 <!-- Modal Add Payroll -->
-<div class="modal fade" id="addPayroll" tabindex="-1" role="dialog" aria-labelledby="addPayroll" aria-hidden="true"  *ngIf="roleEmployee === 'ROLE_ADMIN'">
+<div
+  class="modal fade"
+  id="addPayroll"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="addPayroll"
+  aria-hidden="true"
+  *ngIf="roleEmployee === 'ROLE_ADMIN'"
+>
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="addPayroll">Subir Nomina</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-          <form #addPayrollForm="ngForm" (ngSubmit)="addPayroll(addPayrollForm)">
-              <div class="form-group">
-                <select class="form-control" name="employee" [(ngModel)]="payroll.employee" required>
-                  <option value="">Selecciona un empleado...</option>
-                  <option *ngFor="let employee of employees" [value]="employee._id">{{employee.name}} {{employee.lastname}}</option>
-                </select>
-              </div>
-              <div class="form-group">
-                  <input type="date" class="form-control" name="date" [(ngModel)]="payroll.date" required>
-              </div>
-              <div class="form-group">
-                  <input type="file" class="form-control" id="form-file" name="file" (change)="changePayrollFile($event)" required>
-              </div>
-              
-              <button type="submit" class="btn btn-success">Subir Nomina</button>
-          </form>
+        <form #addPayrollForm="ngForm" (ngSubmit)="addPayroll(addPayrollForm)">
+          <div class="form-group">
+            <select
+              class="form-control"
+              name="employee"
+              [(ngModel)]="payroll.employee"
+              required
+            >
+              <option value="">Selecciona un empleado...</option>
+              <option *ngFor="let employee of employees" [value]="employee._id"
+                >{{ employee.name }} {{ employee.lastname }}</option
+              >
+            </select>
+          </div>
+          <div class="form-group">
+            <input
+              type="date"
+              class="form-control"
+              name="date"
+              [(ngModel)]="payroll.date"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <input
+              type="file"
+              class="form-control"
+              id="form-file"
+              name="file"
+              (change)="changePayrollFile($event)"
+              required
+            />
+          </div>
+
+          <button type="submit" class="btn btn-success">Subir Nomina</button>
+        </form>
       </div>
     </div>
   </div>
 </div>
 
-
 <!-- Modal Confirmation Delete Employee -->
-<div class="modal fade" id="deletePayroll" tabindex="-1" role="dialog" aria-labelledby="deletePayroll" aria-hidden="true" *ngIf="payrolls">
+<div
+  class="modal fade"
+  id="deletePayroll"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="deletePayroll"
+  aria-hidden="true"
+  *ngIf="payrolls"
+>
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header text-center">
         <h5 class="modal-title" id="deletePayroll">¿Eliminar a ?</h5>
       </div>
       <div class="modal-body text-center">
-        <button type="button" class="btn btn-danger mr-2" data-dismiss="modal" (click)="deletePayroll()">Eliminar</button>
-        <button type="button" class="btn btn-primary ml-2" data-dismiss="modal">Cerrar Ventana</button>
+        <button
+          type="button"
+          class="btn btn-danger mr-2"
+          data-dismiss="modal"
+          (click)="deletePayroll()"
+        >
+          Eliminar
+        </button>
+        <button type="button" class="btn btn-primary ml-2" data-dismiss="modal">
+          Cerrar Ventana
+        </button>
       </div>
     </div>
   </div>
